--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "compile-server": "babel server --presets @bebel/preset-env --out-dir dist --source-maps",
     "watch-server": "babel server --presets @bebel/preset-env --out-dir dist --source-maps --watch",
     "start-hook": "nodemon -w server server/start_hook.js",
-    "compile": "webpack --mode development",
-    "watch": "webpack-dev-server --hot --inline --mode development",
+    "compile": "webpack --mode=development",
+    "watch": "webpack-dev-server --hot --inline",
     "dev-all": "npm run watch & npm run watch-server &npm start",
     "dev-all-hook": "npm run watch & npm run start-hook",
     "lint": "eslint --ext js,jsx src server webpack.config.js"
